[gd_scene load_steps=35 format=3 uid="uid://charavp71pvq6"]

[ext_resource type="Script" uid="uid://c4r6dyb2wlxwa" path="res://components/entity_components/sprint.gd" id="1_e4p34"]
[ext_resource type="PackedScene" uid="uid://blc5hnsk32uqd" path="res://assets/characters/godoot_man_player_model.tscn" id="1_oprnr"]
[ext_resource type="Script" uid="uid://dy3n4384afa7s" path="res://components/entity_components/gravity.gd" id="1_qly61"]
[ext_resource type="Script" uid="uid://dgnhrfw17afeb" path="res://entities/player_controller.gd" id="1_x08pd"]
[ext_resource type="Script" uid="uid://1cmop875841a" path="res://components/entity_components/noclip.gd" id="2_rfe5m"]
[ext_resource type="Script" uid="uid://cpq3px4w5rdmg" path="res://components/entity_components/jump.gd" id="3_kdgjc"]
[ext_resource type="Script" uid="uid://n2edawhdtqdd" path="res://components/entity_components/relative_input.gd" id="3_qly61"]
[ext_resource type="Script" uid="uid://5l8i085oi2ii" path="res://components/entity_components/input_mouse_locker.gd" id="4_rfe5m"]
[ext_resource type="Script" uid="uid://c8fdk27nvgr0x" path="res://components/entity_components/toggle_fullscreen.gd" id="6_6nm46"]
[ext_resource type="Script" uid="uid://c7b06cgocrjqj" path="res://components/entity_components/stamina.gd" id="7_i623q"]
[ext_resource type="Script" uid="uid://ru04rhxl2ptf" path="res://components/entity_components/health_component.gd" id="8_i623q"]
[ext_resource type="Script" uid="uid://ytug2cwp8uo" path="res://components/entity_components/body_head_rotation.gd" id="9_dchgp"]
[ext_resource type="PackedScene" uid="uid://55mv0acq64ki" path="res://components/syncing_values/net_position_lerper.tscn" id="10_dchgp"]
[ext_resource type="Script" uid="uid://bq2437i28fq8q" path="res://components/entity_components/player_camera_mgr.gd" id="11_q0i8f"]
[ext_resource type="PackedScene" uid="uid://bm6xg2mfckbov" path="res://entities/weapons/revolver.tscn" id="14_8rie4"]
[ext_resource type="Script" uid="uid://q7pbmvoxmg8f" path="res://components/entity_components/use_equipped_item.gd" id="14_dp3pk"]
[ext_resource type="PackedScene" uid="uid://ceber446a3qku" path="res://components/syncing_values/net_rotation_lerper.tscn" id="15_0i614"]
[ext_resource type="Script" uid="uid://cumtkbxpfad37" path="res://components/entity_components/respawning.gd" id="15_cgp7q"]
[ext_resource type="Script" uid="uid://dk6i2dgov4gy8" path="res://components/entity_components/hit_box_manager.gd" id="16_1n8aq"]
[ext_resource type="PackedScene" uid="uid://bw66n55p0655k" path="res://ui/player_hud.tscn" id="16_oprnr"]
[ext_resource type="Script" uid="uid://de74lsditbc4l" path="res://components/entity_components/particles_on_hit.gd" id="17_fruft"]
[ext_resource type="Script" uid="uid://dsbv3x7w8lw76" path="res://components/entity_components/spawn_remains_on_death.gd" id="18_rcwxb"]
[ext_resource type="PackedScene" uid="uid://b2dme5y7yjg08" path="res://entities/godoot_ball.tscn" id="19_d2i2q"]
[ext_resource type="Script" uid="uid://cujiwmcwo606o" path="res://components/entity_components/disable_collisions_on_death.gd" id="20_mdqif"]
[ext_resource type="PackedScene" uid="uid://b6qydmka43s6f" path="res://components/entity_components/healthbar_3d.tscn" id="21_28s6d"]
[ext_resource type="Script" uid="uid://bqrtl08uc5cyg" path="res://components/entity_components/hide_player_model_on_death.gd" id="21_egchw"]
[ext_resource type="PackedScene" uid="uid://dexa6jq6wkuuy" path="res://components/entity_components/step_checker.tscn" id="22_cicqb"]
[ext_resource type="PackedScene" uid="uid://cf4lpc4yr3db7" path="res://assets/particles/confetti_burst.tscn" id="23_hj0ki"]
[ext_resource type="Script" uid="uid://c28fgp061itwn" path="res://components/random_sfx.gd" id="25_ib8tg"]
[ext_resource type="AudioStream" uid="uid://cmuhpggaxdugk" path="res://assets/sfx/player_ouches/oof1.wav" id="26_rcwxb"]
[ext_resource type="AudioStream" uid="uid://bly5j1s0t76al" path="res://assets/sfx/player_ouches/oof2.wav" id="27_d2i2q"]
[ext_resource type="AudioStream" uid="uid://geemvy2kcaqk" path="res://assets/sfx/player_ouches/oof3.wav" id="28_mdqif"]
[ext_resource type="AudioStream" uid="uid://c2d78lsfcct85" path="res://assets/sfx/player_ouches/oof4.wav" id="29_egchw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_merdl"]
radius = 0.235881

[node name="Player" type="CharacterBody3D"]

[node name="GodootManPlayerModel" parent="." instance=ExtResource("1_oprnr")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="GodootManPlayerModel/GodootManRig" index="0"]
bones/0/position = Vector3(0, 0.917127, -0.0501)
bones/5/rotation = Quaternion(3.82851e-08, 0.861885, -0.507103, -4.7605e-07)
bones/6/rotation = Quaternion(-3.64461e-07, -0.540308, 0.841467, -1.05202e-07)
bones/17/rotation = Quaternion(0.998351, 0.0246182, 0.00128219, -0.0518466)
bones/18/rotation = Quaternion(0.0696507, 0.00171369, 0.0245919, 0.997267)
bones/19/rotation = Quaternion(-0.512372, 1.18894e-07, -5.89285e-08, 0.858764)
bones/22/rotation = Quaternion(0.876352, -0.0216116, 0.0118588, 0.48104)
bones/23/rotation = Quaternion(0.599775, -0.0147869, -0.0197242, 0.799789)
bones/24/rotation = Quaternion(-0.425858, -2.30505e-07, 3.62302e-08, 0.90479)
bones/25/rotation = Quaternion(-4.31393e-08, 0.964307, -0.264788, -7.28031e-08)
bones/26/rotation = Quaternion(-0.681868, 0.681868, -0.187233, -0.187233)

[node name="Godoot" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="0"]
transform = Transform3D(-1, -1.25742e-09, 6.27832e-07, 1.20112e-07, 0.981144, 0.193277, -6.16236e-07, 0.193277, -0.981144, -3.96813e-10, 1.5606, 0.165497)

[node name="GodootHorns" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="1"]
transform = Transform3D(-1, -1.25742e-09, 6.27832e-07, 1.20112e-07, 0.981144, 0.193277, -6.16236e-07, 0.193277, -0.981144, -3.96813e-10, 1.5606, 0.165497)

[node name="HeadLookAt" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="5"]
target_node = NodePath("../../../../Head/HeadLookAtIkTarget")

[node name="BendSpineIk" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="6"]
target_node = NodePath("../../../../Head/HeadLookAtIkTarget")

[node name="RightArmIk" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="7"]
target_node = NodePath("../../../../Head/HandSpot")

[node name="HeadBoneAttach" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="8"]
transform = Transform3D(1, -1.98952e-13, -1.42109e-13, 0, 0.981529, -0.191312, 2.55795e-13, 0.191312, 0.981529, -4.68288e-14, 1.56367, 0.165451)

[node name="ChestBone" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="9"]
transform = Transform3D(1, 3.43439e-18, -4.1046e-18, -4.1046e-18, 0.984318, -0.176405, 3.43439e-18, 0.176405, 0.984317, 0, 1.31523, -0.00490003)

[node name="HipsBone" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="10"]
transform = Transform3D(1, 0, 0, 0, 0.968328, -0.249681, 0, 0.249681, 0.968328, 0, 0.917127, -0.0501)

[node name="ThighBoneL" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="11"]
transform = Transform3D(0.998785, 0.0492881, 7.41008e-06, 0.0461929, -0.936117, 0.348643, 0.0171908, -0.348218, -0.937258, 0.12176, 0.951493, 0.0014)

[node name="ThighBoneR" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="12"]
transform = Transform3D(0.998785, -0.0492878, -7.21777e-06, -0.0360123, -0.729665, -0.682857, 0.0336512, 0.682026, -0.730555, -0.12176, 0.951493, 0.0014)

[node name="ShinBoneL" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="13"]
transform = Transform3D(1, -5.59271e-09, -2.54928e-07, 1.08869e-07, -0.879694, 0.475541, -2.29533e-07, -0.475541, -0.879695, 0.14245, 0.558525, -0.144777)

[node name="ShinBoneR" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="14"]
transform = Transform3D(1, 1.75289e-07, -1.14362e-07, 2.09649e-07, -0.860152, 0.51004, -2.09188e-08, -0.510042, -0.860151, -0.14245, 0.64519, 0.287705)

[node name="UpperArmL" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="15"]
transform = Transform3D(-0.00284319, 0.999905, 0.0134594, -0.999995, -0.00285686, 0.000985468, 0.00102388, -0.0134566, 0.999909, 0.166955, 1.4552, 0.000454813)

[node name="UpperArmR" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="16"]
transform = Transform3D(-0.00284319, -0.999905, -0.0134594, 0.999995, -0.00285686, 0.000985468, -0.00102388, -0.0134566, 0.999909, -0.166955, 1.4552, 0.000454813)

[node name="ForearmL" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="17"]
transform = Transform3D(0.0244154, 0.999568, -0.0163344, -0.999197, 0.0238805, -0.0321676, -0.0317636, 0.0171066, 0.999349, 0.51619, 1.4542, -0.00424515)

[node name="ForearmR" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="18"]
transform = Transform3D(0.0244154, -0.999568, 0.0163344, 0.999197, 0.0238805, -0.0321676, 0.0317636, 0.0171066, 0.999349, -0.51619, 1.4542, -0.00424515)

[node name="FootBoneL" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="19"]
transform = Transform3D(1, 2.01059e-07, 1.38591e-07, 2.36691e-07, -0.836293, -0.548283, 3.05054e-09, 0.548285, -0.836293, 0.14245, 0.180714, -0.349012)

[node name="CowboyBoot2" parent="GodootManPlayerModel/GodootManRig/Skeleton3D/FootBoneL" index="0"]
transform = Transform3D(1, 7.33898e-07, -1.50179e-08, 3.90804e-07, -0.514963, 0.857212, 6.21373e-07, -0.857212, -0.514963, -4.47035e-08, 0.0900024, 0.0781124)

[node name="FootBoneR" parent="GodootManPlayerModel/GodootManRig/Skeleton3D" index="20"]
transform = Transform3D(1, 3.30603e-07, -3.85775e-07, 1.81394e-07, -0.941215, -0.337811, -4.86734e-07, 0.337809, -0.941216, -0.14245, 0.275772, 0.068652)

[node name="CowboyBoot2" parent="GodootManPlayerModel/GodootManRig/Skeleton3D/FootBoneR" index="0"]
transform = Transform3D(1, 9.41191e-07, 4.50195e-08, 4.46088e-07, -0.514963, 0.857212, 8.29984e-07, -0.857212, -0.514963, -4.47035e-08, 0.0900024, 0.0781124)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_merdl")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4616, 0)

[node name="FpsCamera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0687125, -0.080133)

[node name="EyeCast" type="RayCast3D" parent="Head/FpsCamera"]
target_position = Vector3(0, 0, -2000)
debug_shape_custom_color = Color(0, 0, 0, 0.141176)

[node name="HitboxCast" type="RayCast3D" parent="Head/FpsCamera"]
target_position = Vector3(0, -1, -2000)
collision_mask = 8
debug_shape_custom_color = Color(0, 0, 0, 0.141176)

[node name="HeadLookAtIkTarget" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.971047)

[node name="HandSpot" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14822, -0.368713, -0.341573)

[node name="Revolver" parent="Head/HandSpot" instance=ExtResource("14_8rie4")]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("1_x08pd")

[node name="Gravity" type="Node" parent="PlayerController"]
script = ExtResource("1_qly61")
gravity_multiplier = 1.5
metadata/_custom_type_script = "uid://dy3n4384afa7s"

[node name="Jump" type="Node" parent="PlayerController"]
script = ExtResource("3_kdgjc")
jump_force = 5.0
metadata/_custom_type_script = "uid://cpq3px4w5rdmg"

[node name="Sprint" type="Node" parent="PlayerController"]
script = ExtResource("1_e4p34")
metadata/_custom_type_script = "uid://c4r6dyb2wlxwa"

[node name="RelativeInput" type="Node" parent="PlayerController"]
script = ExtResource("3_qly61")
metadata/_custom_type_script = "uid://n2edawhdtqdd"

[node name="InputMouseLocker" type="Node" parent="PlayerController"]
script = ExtResource("4_rfe5m")
metadata/_custom_type_script = "uid://5l8i085oi2ii"

[node name="Noclip" type="Node" parent="PlayerController"]
script = ExtResource("2_rfe5m")
metadata/_custom_type_script = "uid://1cmop875841a"

[node name="ToggleFullscreen" type="Node" parent="PlayerController"]
script = ExtResource("6_6nm46")
metadata/_custom_type_script = "uid://c8fdk27nvgr0x"

[node name="Stamina" type="Node" parent="PlayerController"]
script = ExtResource("7_i623q")
metadata/_custom_type_script = "uid://c7b06cgocrjqj"

[node name="BodyHeadRotation" type="Node" parent="PlayerController"]
script = ExtResource("9_dchgp")
metadata/_custom_type_script = "uid://ytug2cwp8uo"

[node name="PlayerCameraMgr" type="Node" parent="PlayerController"]
script = ExtResource("11_q0i8f")
metadata/_custom_type_script = "uid://bq2437i28fq8q"

[node name="UseEquippedItem" type="Node" parent="PlayerController"]
script = ExtResource("14_dp3pk")

[node name="Respawning" type="Node" parent="PlayerController"]
script = ExtResource("15_cgp7q")
metadata/_custom_type_script = "uid://cumtkbxpfad37"

[node name="HitBoxManager" type="Node" parent="PlayerController" node_paths=PackedStringArray("hitbox_parent")]
script = ExtResource("16_1n8aq")
hitbox_parent = NodePath("../../GodootManPlayerModel/GodootManRig/Skeleton3D")

[node name="ParticlesOnHit" type="Node" parent="PlayerController" node_paths=PackedStringArray("particles")]
script = ExtResource("17_fruft")
particles = NodePath("../../ConfettiBurst")

[node name="SpawnRemainsOnDeath" type="Node" parent="PlayerController"]
script = ExtResource("18_rcwxb")
remains = ExtResource("19_d2i2q")

[node name="DisableCollisionsOnDeath" type="Node" parent="PlayerController" node_paths=PackedStringArray("collision")]
script = ExtResource("20_mdqif")
collision = NodePath("../../CollisionShape3D")

[node name="HidePlayerModelOnDeath" type="Node" parent="PlayerController" node_paths=PackedStringArray("player_models")]
script = ExtResource("21_egchw")
player_models = [NodePath("../../GodootManPlayerModel"), NodePath("../../Head")]

[node name="CoyoteTimer" type="Timer" parent="PlayerController"]
wait_time = 0.5

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_i623q")
metadata/_custom_type_script = "uid://ru04rhxl2ptf"

[node name="Networked" type="Node" parent="."]

[node name="NetPositionLerper" parent="Networked" node_paths=PackedStringArray("controlled_object") instance=ExtResource("10_dchgp")]
controlled_object = NodePath("../..")

[node name="MultiplayerSynchronizer" parent="Networked/NetPositionLerper" index="0"]
replication_interval = 0.05

[node name="NetRotationLerper" parent="Networked" node_paths=PackedStringArray("controlled_object") instance=ExtResource("15_0i614")]
controlled_object = NodePath("../../Head")

[node name="MultiplayerSynchronizer" parent="Networked/NetRotationLerper" index="0"]
replication_interval = 0.1

[node name="PlayerNameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.27529, 0)
billboard = 1
text = "PlayerName"

[node name="PeerIdLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55996, 0)
billboard = 1
modulate = Color(0.408329, 0.408329, 0.408329, 1)
text = "Peer ID"

[node name="PlayerHUD" parent="." instance=ExtResource("16_oprnr")]

[node name="Healthbar3D" parent="." instance=ExtResource("21_28s6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="StepChecker" parent="." instance=ExtResource("22_cicqb")]

[node name="ConfettiBurst" parent="." instance=ExtResource("23_hj0ki")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04577, 0)

[node name="OuchSfx" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65589, -0.451849)
script = ExtResource("25_ib8tg")
metadata/_custom_type_script = "uid://c28fgp061itwn"

[node name="OofSfx" type="AudioStreamPlayer3D" parent="OuchSfx"]
stream = ExtResource("26_rcwxb")

[node name="OofSfx2" type="AudioStreamPlayer3D" parent="OuchSfx"]
stream = ExtResource("27_d2i2q")

[node name="OofSfx3" type="AudioStreamPlayer3D" parent="OuchSfx"]
stream = ExtResource("28_mdqif")

[node name="OofSfx4" type="AudioStreamPlayer3D" parent="OuchSfx"]
stream = ExtResource("29_egchw")

[editable path="GodootManPlayerModel"]
[editable path="Networked/NetPositionLerper"]
[editable path="Networked/NetRotationLerper"]
